Added support for CompletableFuture